@@ -4,13 +4,13 @@ import java.awt.Desktop;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import java.net.URI;
+import java.nio.file.spi.FileSystemProvider;
 import java.util.ArrayList;
 import java.util.Date;
 import javax.swing.JOptionPane;
 import javax.swing.event.ListSelectionEvent;
 import javax.swing.event.ListSelectionListener;
 
-import modelo.Backup;
 import modelo.Ejercicio;
 import modelo.Usuario;
 import modelo.Usuario.IdiomaPreferido;
@@ -190,14 +190,15 @@ public class Controlador implements ActionListener {
 		this.vistaLogin.gettFUsuario().setText("");
 		this.vistaLogin.gettFContrasena().setText("");
 
-		/*
-		 * try { ProcessBuilder pb = new ProcessBuilder("java","-cp",".", "Backup");
-		 * pb.inheritIO(); Process process = pb.start();
-		 * System.out.println(process.isAlive()); } catch (Exception e1) {
-		 * e1.printStackTrace(); }
-		 */
+		try {
+			ProcessBuilder pb = new ProcessBuilder("java", "-jar", "backupgym.jar");
+			pb.inheritIO();
+			Process process = pb.start();
+			System.out.println(process.isAlive());
+		} catch (Exception e1) {
+			e1.printStackTrace();
+		}
 
-		Backup.main(null);
 	}
 
 	/**
@@ -331,15 +332,15 @@ public class Controlador implements ActionListener {
 
 	// Método para obtener ejercicios
 	private void obtenerEjercicios() {
-		String workoutSeleccionado = vistaWorkouts.getWorkoutList().getSelectedValue();
+		Workout selectedWorkout = vistaWorkouts.getWorkoutList().getSelectedValue();
 
-		if (workoutSeleccionado == null) {
+		if (selectedWorkout == null) {
 			vistaWorkouts.getEjersListModel().clear();
 			vistaWorkouts.getBtnStartWorkout().setEnabled(false);
 			return;
 		}
 
-		String workoutId = workoutSeleccionado.split(":")[0];
+		String workoutId = selectedWorkout.getId();
 		vistaWorkouts.getEjersListModel().clear();
 
 		Ejercicio ejercicioModel = new Ejercicio();
@@ -347,7 +348,7 @@ public class Controlador implements ActionListener {
 
 		// Bucle para añadir todos los ejercicios
 		for (Ejercicio ejercicio : listaEjercicios) {
-			vistaWorkouts.getEjersListModel().addElement(ejercicio.getNombre());
+			vistaWorkouts.getEjersListModel().addElement(ejercicio);
 		}
 
 		vistaWorkouts.getBtnStartWorkout().setEnabled(true);
@@ -356,26 +357,22 @@ public class Controlador implements ActionListener {
 	//SACAR POR ID****************************************************************************************
 	// Método para mostrar el ejercicio seleccionado
 	private void mostrarEjercicioSeleccionado() {
-		String workoutSeleccionado = vistaWorkouts.getWorkoutList().getSelectedValue();
-		Workout workout = new Workout();
-		if (workoutSeleccionado == null)
-			return;
 
-		String[] partesWorkout = workoutSeleccionado.split(":");
-		if (partesWorkout.length <= 1)
+		Workout selectedWorkout = this.vistaWorkouts.getWorkoutList().getSelectedValue();
+		if (selectedWorkout == null)
 			return;
-
-		String idWorkout = partesWorkout[0].trim();
-		workout = workout.obtenerWorkoutPorId(idWorkout);
-		this.vistaEjercicios.getLblWorkout().setText(workout.getNombre());		
+	
+		String nombreWorkout = selectedWorkout.getNombre();
+		this.vistaEjercicios.getLblWorkout().setText(nombreWorkout);
 
 		// Muestra el primer ejercicio de la lista de ejercicios del workout
 		// seleccionado
 
 		if (vistaWorkouts.getEjersListModel().isEmpty())
 			return;
-
-		Ejercicio primerEjercicio = new Ejercicio().obtenerEjercicios(partesWorkout[0]).get(0);
+		Ejercicio primerEjercicio = new Ejercicio();
+		ArrayList<Ejercicio> ejercicios = primerEjercicio.obtenerEjercicios(selectedWorkout.getId());
+		primerEjercicio = ejercicios.getFirst();
 		this.vistaEjercicios.getLblEjercicio().setText(primerEjercicio.getNombre());
 		this.vistaEjercicios.getTxtAreaDescripcion().setText(primerEjercicio.getDescripcion());
 		this.vistaPrincipal.colocarImg(vistaEjercicios.getLblImgEjer(), primerEjercicio.getFoto(), vistaEjercicios);
@@ -395,10 +392,9 @@ public class Controlador implements ActionListener {
 
 		// Bucle para añadir cada workout a la JList
 		for (Workout workout : listaWorkouts) {
-			String workoutInfo = workout.getId() + ": " + workout.getNombre() + " (Nivel " + workout.getNivel() + ")";
 			String url = workout.getVideoUrl();
 			String descripcion = workout.getDescripcion();
-			vistaWorkouts.addWorkout(workoutInfo, url, descripcion);
+			vistaWorkouts.addWorkout(workout, url, descripcion);
 		}
 	}
 
@@ -407,9 +403,7 @@ public class Controlador implements ActionListener {
 	 * JList de ejercicios en el panelWorkouts
 	 */
 	private void cargarInfoWorkout() {
-		String workoutSeleccionado = vistaWorkouts.getWorkoutList().getSelectedValue();
-		String urlWorkout = vistaWorkouts.getWorkoutUrl(workoutSeleccionado);
-		String descripcionWorkout = vistaWorkouts.getWorkoutDescripcion(workoutSeleccionado);
+		Workout workoutSeleccionado = vistaWorkouts.getWorkoutList().getSelectedValue();
 
 		if (workoutSeleccionado == null) {
 			vistaWorkouts.getBtnDescripcion().setEnabled(false);
@@ -417,7 +411,9 @@ public class Controlador implements ActionListener {
 			// en vez de hacer esto igual se puede vaciar el objeto
 			return;
 		}
-			
+
+		String urlWorkout = vistaWorkouts.getWorkoutUrl(workoutSeleccionado.getVideoUrl());
+		String descripcionWorkout = vistaWorkouts.getWorkoutDescripcion(workoutSeleccionado.getDescripcion());
 
 		// CARGAR URL
 		if (urlWorkout == null || urlWorkout.isEmpty()) {
